inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-pod
  template:
    metadata:
      labels:
        app: inventory-pod
    spec:
      containers:
      - name: invent
        image: inv:latest
        imagePullPolicy: Never 
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
