ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "myemp.org" 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: employee-service
            port:
              number: 8080
      - path: /info
        pathType: Prefix
        backend:
          service:
            name: employee-service
            port:
              number: 8080
      - path: /inventory
        pathType: Prefix
        backend:
          service:
            name: inventory-service
            port:
              number: 80
